# video_lessons_django

./: .gitignore  pyproject.toml
core/: settings.py  urls.py
lessons/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
lessons/migrations/: 0001_initial.py  0002_alter_lesson_duration_alter_lesson_video_path.py  0002_lessonview_date_last_viewing.py  0003_alter_lesson_duration.py  0004_alter_lesson_managers.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
users/migrations/: 0001_initial.py
